--- a/src/index.css
+++ b/src/index.css
@@ -14,46 +14,17 @@ code {
     monospace;
 }
 
-main {
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 ul {
-  list-style-type: none;
+  list-style: none;
+  margin: 0;
   padding: 0;
-}
-
-li {
-  list-style-position: outside;
-  padding: 5px;
-  font-size: 16px;
-}
-
-h2 {
-  font-size: 24px;
-  line-height: 1.66;
-  padding: 20px 0;
-}
-
-button {
-  padding: 10px;
-  margin: 0 5px;
-  width: 100px;
-  background-color: transparent;
-  border: 1px solid grey;
-  border-radius: 5px;
-  box-shadow: 1px 1px 7px grey;
-  cursor: pointer;
-}
-
-button:hover {
-  box-shadow: 1px 1px 7px grey inset;
-color: rgb(223, 41, 9);
-}
-
-.buttonList {
-  display: flex;
 }
